<resources>
    <string name="app_name">ToDoList</string>

    <string name="version">Version: Beta: 0.2</string>

    <string name="title">CHECKED</string>
    <string name="addtitle">Add a new task</string>
    <string name="tasktitle">Title</string>

    <string name="titleHint">Task Title</string>
    <string name="dateTitle">Choose Task Date</string>
    <string name="dateButton">Change Date</string>
    <string name="descHint">Description</string>
    <string name="priorityTitle">Choose Task Priority</string>
    <string name="priorityDialog">Task Priority</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="bugs">Report Bugs</string>
    <string name="translate">Help translate the app</string>
    <string name="privacy">Privacy Policy</string>

    <string name="edit_title">Edit this task</string>
    <string name="new_title">Add new task</string>
    <string name="edit_date_title">Task Date</string>
    <string name="done">Done</string>

    <string name="overview">You have %s tasks to finish.</string>
</resources>