<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edittasklayout"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/edittitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_title"
        android:textColor="@color/mainText"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDone" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:hint="@string/titleHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittitle"
        app:boxBackgroundColor="@color/mainBackground"
        android:textColorHint="@color/mainText"
        app:hintTextColor="@color/mainText"
        app:boxStrokeColor="@color/mainText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvTitleTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainText"
            android:textSize="24sp"
            android:autoText="true"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/descHint"
        android:textColorHint="@color/mainText"
        app:boxBackgroundColor="@color/mainBackground"
        app:boxStrokeColor="@color/mainText"
        app:hintTextColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvDescTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:autoText="true"
            android:textColor="@color/mainText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/taskDateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:drawableStart="@drawable/ic_date"
        android:drawablePadding="10dp"
        android:drawableTint="@color/mainText"
        android:textSize="28sp"
        android:gravity="center_vertical"
        android:text="@string/edit_date_title"
        android:textColor="@color/mainText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTextField" />

    <TextView
        android:id="@+id/tvTaskStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="JUNE 9th, 2020"
        android:textColor="@color/mainText"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDateTitle" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:backgroundTint="@color/darkPrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="@color/cancelred"
        app:strokeColor="@color/cancelred"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnSave"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/done"
        android:textColor="@color/mainText"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>