<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edittasklayout"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/edittitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:text="@string/new_title"
        android:textColor="@color/mainText"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:hint="@string/titleHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittitle"
        app:boxBackgroundColor="@color/mainBackground"
        android:textColorHint="@color/mainText"
        app:hintTextColor="@color/mainText"
        app:boxStrokeColor="@color/mainText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvTitleTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainText"
            android:autoText="true"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/taskDateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_access_time"
        android:drawablePadding="10dp"
        android:drawableTint="@color/mainText"
        android:gravity="center_vertical"
        android:text="@string/edit_date_title"
        android:textColor="@color/mainText"
        app:layout_constraintBottom_toTopOf="@id/tvTaskEndDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTaskEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:padding="8dp"
        android:text="JUNE 9th, 2020"
        android:textColor="@color/mainText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/priorityTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskStartDate" />

    <TextView
        android:id="@+id/tvTaskStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:clickable="true"
        android:padding="8dp"
        android:text="JUNE 9th, 2020"
        android:textColor="@color/mainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDateTitle" />

    <TextView
        android:id="@+id/tvTaskStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="8:00"
        android:textColor="@color/mainText"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDateTitle" />

    <TextView
        android:id="@+id/tvTaskStopTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="8:30"
        android:textColor="@color/mainText"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskStartTime" />

    <TextView
        android:id="@+id/priorityTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/mainText"
        android:gravity="center_vertical"
        android:text="@string/priorityTitle"
        android:textColor="@color/mainText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/prioritySelect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTaskEndDate" />

    <TextView
        android:id="@+id/prioritySelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="8dp"
        android:text="Low"
        android:textColor="@color/mainText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/descTextField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/priorityIndicator"
        app:layout_constraintTop_toBottomOf="@id/priorityTitle" />

    <ImageView
        android:id="@+id/priorityIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/descTextField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTaskEndDate" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:hint="@string/descHint"
        android:textColorHint="@color/mainText"
        app:boxBackgroundColor="@color/mainBackground"
        app:boxStrokeColor="@color/mainText"

        app:hintTextColor="@color/mainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prioritySelect">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvDescTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainText"
            android:autoText="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:backgroundTint="@color/darkPrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="@color/cancelred"
        app:strokeColor="@color/cancelred"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnSave"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>